--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,8 +4,8 @@
 
 body{
     margin:0;
-    
-   
+
+
 }
 
 p{
@@ -17,6 +17,10 @@ body, p, h1, h2, h3, h4, h5, h6 {
   font-family: 'Poppins', sans-serif !important;
 }
 
-
+.backWel{
+    background-color: #4A6159;
+    color: #fff;
+    
+}
 
 
