--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -70,5 +70,15 @@ line-height: normal;
     margin-top: 5rem;
 }
 
+.confirm-image{
+    width: 100%;
+   height: 100%;
+flex-shrink: 0;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+}
+
 
 
