--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,6 +15,7 @@ p{
 /* style.css */
 body, p, h1, h2, h3, h4, h5, h6 {
   font-family: 'Poppins', sans-serif !important;
+ 
 }
 
 h2{
@@ -26,6 +27,10 @@ font-style: normal;
 font-weight: 600;
 line-height: normal;
 
+}
+
+.header{
+  background-color:#4A6159;
 }
 
 h4{
@@ -44,6 +49,14 @@ line-height: normal;
     background-color: #4A6159;
     color: #fff;
     
+}
+
+.bg-custom-background {
+  background-color: #4A6159 !important;
+}
+
+a{
+  color: #4A6159;
 }
 
 
