Product create design approach

--- a/public/css/adminProductsIndex.css
+++ b/public/css/adminProductsIndex.css
@@ -8,7 +8,7 @@ main{
     margin-top: 5px;
 }
 .product_form{
-    width: 60%;
+    width: 50%;
     height: auto;
     display: flex;
     justify-content: center;
@@ -19,6 +19,9 @@ main{
     border-radius: 20px;
   
 }
+.create_product_form{
+    width: 80%;
+}
 .BtnMenu{
     position: absolute;
     top: 115px;
@@ -28,3 +31,8 @@ main{
     margin-top: 20px;
 }
 
+.name_font{
+    font-size: 17px;
+    font-weight: 600;
+    color: black;
+}
