--- a/public/css/adminOrderIndex.css
+++ b/public/css/adminOrderIndex.css
@@ -45,7 +45,23 @@ background-color: #4A6159;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #D5ECE4;
-    
+    background-color: #D5ECE4;    
   }
-  
+
+  .button-create{
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    margin-top: 10px;
+    margin-right: 130px;
+  }
+ 
+  .create-container {
+    background-color: #D5ECE4;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+   
+
+  }
